--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0 auto;
     direction: ltr;
-    box-sizing: border-box;
     padding: 0;
 }
 
